--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,29 @@ a{
     background-color: #1F2937;
     padding: 88px;
 }
+.section2{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.images{
+    display:flex;
+    flex-direction: row;
+    gap: 16px;
+}
+.small-image{
+    width: 200px;
+}
+.block{
+    width: 200px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.caption{
+    text-align: center;
+}
 img {
     width: 600px;
 }
