--- a/styles.css
+++ b/styles.css
@@ -34,12 +34,17 @@ a{
     color:white;
     text-decoration: none;
 }
+img{
+    width: 600px;
+    border-radius: 16px;
+}
 .section1{
     display:flex;
     align-content: center;
     justify-content: center;
     background-color: #1F2937;
     padding: 88px;
+    gap: 16px;
 }
 .section2{
     display: flex;
@@ -52,11 +57,14 @@ a{
 .images{
     display:flex;
     flex-direction: row;
-    gap: 16px;
+    gap: 32px;
 }
 .small-image{
     width: 200px;
     height:350px;
+    padding: 0;
+    border-radius: 16px;
+    border: 4px solid #1F2937;
 }
 .title{
     font-size: 36px;
